--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,199 +1,197 @@
 
-  <div style="height: 85vh; margin-top: 80px;">
-    <div class="d-flex justify-content-center" style="height: 425px; ">
-     <!-- text left of carousel  -->
-     <div class="text-box align-self-center mr-3">
-      <h1>Fund</h1>
-      <h4>local restaurants where you enjoy to eat</h4>
-    </div>
-
-    <!-- carousel -->
-    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
-          <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="restaurant pic">
-        </div>
-        <div class="carousel-item" data-interval="2000">
-          <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="chef pic">
-        </div>
-        <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1555536309-d2d1365be69d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="coffee bar pic">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <!-- text right of carousel  -->
-    <div class="text-box align-self-center ml-3">
-      <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
-    </div>
-    <!-- flexbox closing div -->
+<div style="height: 85vh; margin-top: 80px;">
+  <div class="d-flex justify-content-center" style="height: 425px; ">
+   <!-- text left of carousel  -->
+   <div class="text-box align-self-center mr-3">
+    <h1>Fund</h1>
+    <h4>local restaurants where you enjoy to eat</h4>
   </div>
 
-  <!-- choose investing or raising -->
-  <div class="d-flex justify-content-center my-4">
-    <div class="choose-option d-flex">
-      <div class="d-flex flex-column w-50 justify-content-center text-center">
-        <h5>Interested in Investing?</h5>
-        <h5><%= link_to "Investments", "/campaigns", class: "btn btn-secondary" %></h5>
+  <!-- carousel -->
+  <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="10000">
+        <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="restaurant pic">
       </div>
-      <!-- line -->
-      <div class="h-75 align-self-center" style="border: 1px solid lightgrey">
+      <div class="carousel-item" data-interval="2000">
+        <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="chef pic">
       </div>
-
-      <div class="d-flex flex-column w-50 justify-content-center text-center">
-        <h5>Interested in Raising?</h5>
-        <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1555536309-d2d1365be69d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="coffee bar pic">
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
-  <!-- investment figures -->
-  <div class="d-flex text-center justify-content-center" style="margin-top: 50px">
-    <div class="mx-5">
-      <h2>70m</h2>
-      <h4>since last investment</h4>
-    </div>
-
-    <div class="mx-5">
-      <h2>23 restaurants</h2>
-      <h4>funded</h4>
-    </div>
-
-    <div class="mx-5">
-      <h2>681</h2>
-      <h4>investors served</h4>
-    </div>
+  <!-- text right of carousel  -->
+  <div class="text-box align-self-center ml-3">
+    <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
   </div>
-
-  <!-- horizontal line -->
-  <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
-    </div>
-
-  <!-- view height 100 div -->
+  <!-- flexbox closing div -->
 </div>
 
-  <!-- investment card -->
-  <div class="d-flex flex-wrap justify-content-around">
+<!-- choose investing or raising -->
+<div class="d-flex justify-content-center my-4">
+  <div class="choose-option d-flex">
+    <div class="d-flex flex-column w-50 justify-content-center text-center">
+      <h5>Interested in Investing?</h5>
+      <h5><%= link_to "Investments", "/campaigns", class: "btn btn-secondary" %></h5>
+    </div>
+    <!-- line -->
+    <div class="h-75 align-self-center" style="border: 1px solid lightgrey">
+    </div>
 
-    <% @campaigns.take(3).each do |campaign| %>
-    <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
+    <div class="d-flex flex-column w-50 justify-content-center text-center">
+      <h5>Interested in Raising?</h5>
+      <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+    </div>
+  </div>
+</div>
 
-    <div class="card-wrapper">
-      <!-- investment card -->
-      <div class="card-investment">
-        <div class="card-user">
-          <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+<!-- investment figures -->
+<div class="d-flex text-center justify-content-center" style="margin-top: 50px">
+  <div class="mx-5">
+    <h2>70m</h2>
+    <h4>since last investment</h4>
+  </div>
+
+  <div class="mx-5">
+    <h2>23 restaurants</h2>
+    <h4>funded</h4>
+  </div>
+
+  <div class="mx-5">
+    <h2>681</h2>
+    <h4>investors served</h4>
+  </div>
+</div>
+
+<!-- horizontal line -->
+<div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
+</div>
+
+<!-- view height 100 div -->
+</div>
+
+<!-- investment card -->
+<div class="d-flex flex-wrap justify-content-around">
+
+  <% @campaigns.take(3).each do |campaign| %>
+  <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
+
+  <div class="card-wrapper">
+    <!-- investment card -->
+    <div class="card-investment">
+      <div class="card-user">
+        <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+      </div>
+      <!-- background pic -->
+      <!-- insert company.photo -->
+      <% if campaign.company.photo.attached? %>
+      <%= cl_image_tag campaign.company.photo.key, class: "card-pic"%>
+      <% else %>
+      <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
+      <% end %>
+
+      <!-- <h5>10 days left</h5> -->
+      <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+
+      <h1><%= campaign.company.name %></h1>
+      <p class="mb-4"><%= campaign.description %></p>
+
+      <div class="box-align">
+        <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
+      </div>
+      <div class="target-bar">
+        <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
+        <% target = campaign.min_target %>
+        <% status = ((raised.to_f/target)*100).round(1) %>
+        <div>
+          <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
+          </progress>
         </div>
-        <!-- background pic -->
-        <!-- insert company.photo -->
-       <% if campaign.company.photo.attached? %>
-        <%= cl_image_tag campaign.company.photo.key, class: "card-pic"%>
-        <% else %>
-          <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
-        <% end %>
+        <div class="relative"> <p><%= status %> %</p></div>
+      </div>
 
-        <!-- <h5>10 days left</h5> -->
-        <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+      <style>
+        div.relative {
+          position: relative;
+          left: 0px;
+          bottom:23px;
 
-        <h1><%= campaign.company.name %></h1>
-        <div style="height: 50px">
-          <p><%= campaign.title %></p>
+        }
+      </style>
+
+      <div class="box-align d-flex justify-content-between">
+        <div class="text-center">
+          <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+          <p>raised</p>
         </div>
-
-        <div class="box-align">
-          <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
         </div>
-        <div class="target-bar">
-          <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
-          <% target = campaign.min_target %>
-          <% status = ((raised.to_f/target)*100).round(1) %>
-          <div>
-            <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
-            </progress>
-          </div>
-          <div class="relative"> <p><%= status %> %</p></div>
+        <div class="text-center">
+          <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+          <p>interest</p>
         </div>
-
-        <style>
-          div.relative {
-            position: relative;
-            left: 0px;
-            bottom:23px;
-
-          }
-        </style>
-
-        <div class="box-align d-flex justify-content-between">
-          <div class="text-center">
-            <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
-            <p>raised</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
-            <p>interest</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
-            <p>investors</p>
-          </div>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+        </div>
+        <div class="text-center">
+          <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
+          <p>investors</p>
         </div>
       </div>
     </div>
-    <% end %>
-    <% end %>
-    <!-- # investment card closing div -->
   </div>
+  <% end %>
+  <% end %>
+  <!-- # investment card closing div -->
+</div>
 
 
-  <div class="d-flex justify-content-center">
-    <h5 class="mt-5"><%= link_to "SHOW MORE", "/campaigns", class: "btn btn-secondary" %></h5>
-  </div>
+<div class="d-flex justify-content-center">
+  <h5 class="mt-5"><%= link_to "SHOW MORE", "/campaigns", class: "btn btn-secondary" %></h5>
+</div>
 
-  <!-- horizontal line -->
-  <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
-    </div>
+<!-- horizontal line -->
+<div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
+</div>
 
-  <div class="container">
-    <div class="d-flex my-4 py-4">
-      <img class="pic-home" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1">
-      <div class="ml-4 align-self-center">
-        <h1>Support entrepreneurs on a mission</h1>
-        <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
-      </div>
-    </div>
-
-    <div class="d-flex my-4 py-4">
-      <div class="mr-4 align-self-center">
-        <h1>Create change in your community</h1>
-        <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
-      </div>
-      <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
+<div class="container">
+  <div class="d-flex my-4 py-4">
+    <img class="pic-home" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1">
+    <div class="ml-4 align-self-center">
+      <h1>Support entrepreneurs on a mission</h1>
+      <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
     </div>
   </div>
 
-
-  <!-- horizontal line -->
-  <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
+  <div class="d-flex my-4 py-4">
+    <div class="mr-4 align-self-center">
+      <h1>Create change in your community</h1>
+      <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
     </div>
-
-  <div class="mb-4 d-flex flex-column text-center">
-    <p>We're proud to fund great entrepreneurs.</p>
-    <p>Because we know Argentina would be a lot less interesting without them.</p>
-    <br>
-    <p><strong>Are you with us?</strong></p>
-    <h5><%= link_to "FUND RESTAURANTS", "/campaigns", class: "btn btn-secondary" %></h5>
+    <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
   </div>
+</div>
+
+
+<!-- horizontal line -->
+<div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
+</div>
+
+<div class="mb-4 d-flex flex-column text-center">
+  <p>We're proud to fund great entrepreneurs.</p>
+  <p>Because we know Argentina would be a lot less interesting without them.</p>
+  <br>
+  <p><strong>Are you with us?</strong></p>
+  <h5><%= link_to "FUND RESTAURANTS", "/campaigns", class: "btn btn-secondary" %></h5>
+</div>
 
 
