--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,9 +1,14 @@
 <p>Hi <%= @user.first_name %>,</p>
 
-<p>welcome to the Fundeat community! This is where great Restaurant investing starts... </p>
-
-<%= link_to("Start investing", root_url) %>
+<% if @user.owner? %>
+<p>welcome to the Fundeat community! We are happy to have you on board. This is where great Restaurant investing begins... </p>
+<%= link_to("View opportunities", root_url) %>
 <!-- <a href="http://www.fundeat.club/campaigns">Start investing</a> -->
+<% else %>
+<p>welcome to the Fundeat community! We are happy to have you on board. This is your uniqie opportunity to quickly raise money for your restaurant business.</p>
+<%= link_to("Create a campaign", root_url) %>
+<% end %>
+
 
 <p>Best regards,</p>
 
