--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -17,12 +17,13 @@
 }
 
 .card-investment {
-  height: 540px;
+  height: 480px;
   width: 380px;
   background-color: #F3F3F3;
   border-radius: 20px;
-  margin: 20px;
+  margin: 5px;
   box-shadow: 0 0 24px rgba(33,33,33,.3);
+  // padding:20px;
 }
 
 
