--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -8,7 +8,7 @@
     <div class="col-lg-8">
       <!-- COMPANY LOGO -->
       <div class="restaurant-logo position-relative">
-        <%= render "shared/restaurant_icon", campaign: @campaign %>
+        <%= render "shared/restaurant_icon", campaign: @campaign, class: "img-sm-grey", alt: "avatar" %>
       </div>
 
       <h2 class="mt-5 font-weight-bold"><%= @campaign.company.name %></h2>
