--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -24,4 +24,6 @@
   border-radius: 20px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: 1px solid grey;
+  background: #F3F3F3;
+  padding: 16px;
 }
