--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -85,7 +85,7 @@
 
 progress[value]::-webkit-progress-value {
   background-image:
-  -webkit-linear-gradient(left, lightgrey, lightgrey);
+  -webkit-linear-gradient(left, #1EDD88, #1EDD88);
 }
 
 progress[value]::-webkit-progress-bar {
