--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,5 +1,5 @@
-<%= link_to owners_dashboard_path do %>
-<i class="fas fa-chevron-circle-left ml-3 mt-3 exit-button" style="font-size: 48px; color: grey;"></i>
+<%= link_to raising_path do %>
+  <i class="fas fa-chevron-circle-left ml-3 mt-3 exit-button" style="font-size: 48px; color: grey;"></i>
 <% end %>
 
-<%= render 'campaigns/shared/form', campaign: @campaign %>
+<%= render 'campaigns/shared/form' %>
