--- a/app/views/campaigns/mycampaigns.html.erb
+++ b/app/views/campaigns/mycampaigns.html.erb
@@ -9,21 +9,100 @@
       <a href="/mycampaigns" class="list-group-item list-group-item-action bg-light">Campaign</a>
       <a href="/mycampaigns/support" class="list-group-item list-group-item-action bg-light">Support</a>
     </div>
+    <!-- /#closing-wrapper -->
+  </div>
   <!-- /#closing-wrapper -->
+
+  <!-- <div class="d-flex justify-content-center"> -->
+
+    <div class="px-5 mx-2 d-flex flex-wrap justify-content-around">
+      <% @campaigns.each do |campaign| %>
+      <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
+      <div class="card-wrapper">
+        <!-- investment card -->
+        <div class="card-investment">
+          <div class="card-user">
+            <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+          </div>
+          <!-- background pic -->
+
+          <!-- insert company.photo -->
+          <% if campaign.company.photo.attached? %>
+          <%= cl_image_tag campaign.company.photo.key, class: "card-pic"%>
+          <% else %>
+          <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
+          <% end %>
+
+          <!-- <h5>10 days left</h5> -->
+          <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+
+          <h1><%= campaign.company.name %></h1>
+          <div style="height: 50px">
+            <p><%= campaign.title %></p>
+          </div>
+
+          <div class="box-align">
+            <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
+          </div>
+          <div class="target-bar">
+            <% if Investment.where(campaign_id: campaign.id).sum("amount") != 0 %>
+            <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
+            <% target = campaign.min_target %>
+            <% status = ((raised&.to_f/target)*100).round(1) %>
+            <% end %>
+            <div>
+              <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
+              </progress>
+            </div>
+            <div class="relative"> <p><%= status %> %</p></div>
+          </div>
+
+          <style>
+            div.relative {
+              position: relative;
+              left: 0px;
+              bottom:23px;
+
+            }
+          </style>
+
+          <div class="box-align d-flex justify-content-between">
+            <div class="text-center">
+              <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+              <p>raised</p>
+            </div>
+            <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+            </div>
+            <div class="text-center">
+              <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+              <p>interest</p>
+            </div>
+            <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+            </div>
+            <div class="text-center">
+              <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
+              <p>investors</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% end %>
+      <% end %>
+      <!-- # investment card closing div -->
+
+    </div>
+
+
+    <% else %>
+
+    <div id="page-content-wrapper">
+      <div class="container-fluid">
+        <h3>Hi there, <%= current_user.first_name%></h3>
+        <p>Ready to launch your first campaign?</p>
+        <h5><%= link_to "Create Campaign", "/campaigns/new", class: "btn btn-secondary" %></h5>
+      </div>
+    </div>
+
+    <% end %>
   </div>
-<!-- /#closing-wrapper -->
-
-<div id="page-content-wrapper">
-  <div class="container-fluid">
-    <h3>Hi there, <%= current_user.first_name%></h3>
-    <p>Ready to launch your first campaign?</p>
-    <h5><%= link_to "Create Campaign", "/campaigns/new", class: "btn btn-secondary" %></h5>
-  </div>
-</div>
-
-
-<%#= render "devise/shared/links" %>
-
-<% else %>
-<%= "Sign up as a raiser now!" %>
-<% end %>
