--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -7,7 +7,7 @@
     <div class="h-100 text-center mr-3 d-flex justify-content-center align-items-center">
       <div>
         <h1>Fund</h1>
-        <h4>local restaurants where you enjoy to eat</h4>
+        <h4>Local restaurants where you enjoy to eat</h4>
       </div>
     </div>
   </div>
@@ -39,7 +39,7 @@
   <!-- text right of carousel  -->
   <div class="col-lg-3 d-none d-lg-block">
     <div class="h-100 text-center align-self-center ml-3 d-flex justify-content-center align-items-center">
-      <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
+      <h4>We love the ambitious, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
     </div>
   </div>
   <!-- flexbox closing div -->
