--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -10,10 +10,25 @@
     </div>
   </div>
 
-<!-- Page content -->
-  <h1>Support</h1>
-<!-- Page content end-->
+  <!-- Page content -->
+  <div class="container">
 
-<!-- /#closing-wrapper -->
+    <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+
+<div style="margin-bottom: 50px;">
+      <h1>Support</h1>
+</div>
+
+      <%= simple_form_for :search, method: "get" do |f| %>
+      <%= f.input :Available_dates, as: :string, required: false, input_html: {class: "datepicker"} %>
+      <%#= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+      <%= f.button :submit, "Schedule an appointment now", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+
+  <!-- Page content end-->
+
+  <!-- /#closing-wrapper -->
 </div>
 <!-- /#closing-wrapper -->
